=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.10 - In development

=over

=item *

Krang will now correctly guess the media type when media files are uploaded
via the FTP interface. [Michael Peters]

=item *

Importing stories has been greatly improved in the following ways [Michael Peters]

=over

=item * Circular dependencies between categories and stories are now handled better

=item * Stories that are changing their class in the import are now handled

=item * When checking for stories who's non-primary url might conflict, we correctly ignore the imported story's other URLs

=back

=back

=head2 3.09 - March 08, 2010

=over

=item *

Adding C<ReservedURLs> configuration directive.  This prevents Krang
users from creating stories or categories with certain URLs.  This is
useful when you have another application serving the Krang published
content and it needs certain URLs reserved for it's functionality.
This can be set per-instance or globally. [Michael Peters]

=item *

Fixed ISE that occurred when certain bad date formats were used
for Cover Dates on stories. [Michael Peters]

=item *

Upgraded L<Apache::Session> and changed our usage to not require
an exclusive lock for every request. [Michael Peters]

=item *

Added the F<bin/krang_generate_csv> script. [Michael Peters]

=item *

We now generate higher quality thumbnails and there were a couple of
places (like "Select Media") where thumbnails weren't showing up when
they should have. [Michael Peters]

=item * 

Added new C<command_column_extra_args> option to L<Krang::HTMLPager>
so that more arguments can be passed into the C<command_column_commands>
besides just the id. [Michael Peters]

=item *

Added C<read_only> flag to Media and Template objects. This flag
can only be set by the F<bin/krang_read_only> admin script so that these
items can't be set/unset by users. [Michael Peters]

=item *
